--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,11 @@
     <h1>FILMOTEKA</h1>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
+    
+    <include src="./partials/movie-cards.html"></include>
+    <include src="./partials/footer.html"></include>
 
-
-
+    
     <script src="./js/script.js" type="module"></script> 
   </body>
 </html>
