--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Filmoteka - js-teamproject-team3 </title>
-  <link rel="stylesheet" href="./sass/index.scss" />
+  <link rel="stylesheet" href="/src/sass/index.scss" />
   <!-- <script type="module" src="./index.js"></script> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -18,7 +18,7 @@
     <div class="header-top">
       <div class="header-top-left">
           <a class="filmtitle" href="/src/index.html">
-            <img class="film" src="./images/film.png" alt="film">
+            <img class="film" src="/src/images/film.png" alt="film">
             <h1 class="page-title">Filmoteka</h1>
           </a>
       </div>
