--- a/src/index.html
+++ b/src/index.html
@@ -55,20 +55,8 @@
   </main>
 
   <!-- PAGINATION SECTION -->
-<div class="pagination">
+<include src="partials/pagination.html"></include>
 
-  <button class="pagination-button previous-page" type="submit" id="prev">&#11164</button>
-  <button class="pagination-button first-page" type="submit">...</button>
-  <button class="pagination-button button-a" type="submit">1</button>
-  <button class="pagination-button button-b" type="submit">2</button>
-  <button class="pagination-button button-c" type="submit" id="current">3</button>
-  <button class="pagination-button button-d" type="submit">4</button>
-  <button class="pagination-button button-e" type="submit">5</button>
-  <button class="pagination-button last-page" type="submit">...</button>
-  <button class="pagination-button next-page" type="submit" id="next">&#11166</button>
-</div>
-
- 
 
 <!-- MODAL SECTION -->
 <include src="partials/modal.html"></include>
