--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,8 @@
  
   <!-- <include src="partials/task21_loader.html"></include> -->
   <include src="partials/task4_footer.html"></include>
-  <!-- <include src="partials/modal.html"></include> -->
+  <include src="partials/pagination.html"></include>
+ 
 
   <script src="./js/script.js" type="module"></script>
   <script src="./js/pagination.js" type="module"></script>
