--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,7 @@
 
   <script src="./js/script.js" type="module"></script>
   <script src="./js/pagination.js" type="module"></script>
+  <script src="./js/library.js" type="module"></script>
 </body>
 
 </html>
